fix: minY to zero, ordinals, first & last rank

--- a/public/locales/en-GB/dashboard-birthday-explorer.json
+++ b/public/locales/en-GB/dashboard-birthday-explorer.json
@@ -13,32 +13,46 @@
     "validation_min": "Please enter a date later than 1st Jan 1923.",
     "validation_max": "Please enter a date earlier than 31st Dec 2017",
     "age": "You are {{ years }} years, {{ months }} months and {{ days }} days old",
-    "info1_one": "On your birthday, there was ",
+    "info1": "On your birthday, there was ",
     "info1_other": "On your birthday, there were ",
-    "state_count": "{{ count, number }}",
-    "info2_one": " baby born in ",
+    "state_births": "{{ count, number }}",
+    "info2": " baby born in ",
     "info2_other": " babies born in ",
-    "info2_overseas_one": " Malaysian baby born ",
+    "info2_overseas": " Malaysian baby born ",
     "info2_overseas_other": " Malaysian babies born ",
     "overseas": "Overseas",
     "info3": ", and ",
-    "nation_count": "{{ count, number }}",
+    "nation_births": "{{ count, number }}",
     "info4_one": " baby born nationwide",
     "info4_other": " babies born nationwide",
     "info5_one": ", which is you!",
     "info5_other": ", including you!",
     "info6": "In {{ year }}, your birthday was the ",
-    "rank": "{{ rank }}{{ suffix }}",
-    "popularity": " most popular out of {{ count }} dates. The most popular was {{ year_popular }}, while the most rare was {{ year_rare }}.",
+    "rank_one": " most popular",
+    "rank_two": "{{ count }}nd",
+    "rank_few": "{{ count }}rd",
+    "rank_other": "{{ count }}th",
+    "rank_least": " most rare",
+    "popularity_first": " out of {{ count }} dates. The most popular was ",
+    "popularity_most": " most popular out of {{ count }} dates. The most popular was ",
+    "popularity_least": " out of {{ count }} dates. The most popular was ",
+    "year_popular_one": "{{ count }}st {{ month }}",
+    "year_popular_two": "{{ count }}nd {{ month }}",
+    "year_popular_few": "{{ count }}rd {{ month }}",
+    "year_popular_other": "{{ count }}th {{ month }}",
+    "rare": ", while the most rare was ",
+    "year_rare_one": "{{ count }}st {{ month }}.",
+    "year_rare_two": "{{ count }}nd {{ month }}.",
+    "year_rare_few": "{{ count }}rd {{ month }}.",
+    "year_rare_other": "{{ count }}th {{ month }}.",
     "explore": "Use the time series chart below to explore how the popularity of birthdays has changed over the years."
   },
   "section_2": {
     "title": "{{ state }}: Number of babies born on each date, {{ start_year }} to {{ end_year }}",
     "sameyear": "{{ state }}: Number of babies born on each date in {{ year }}",
-    "description": "Note: There are no births on 29 Feb because there are no leap years between {{ start_year }} and {{ end_year }}.",
-    "desc_sameyear": "Note: There are no births on 29 Feb because there are no leap years in {{ year }}.",
     "by_date": "By Date",
     "by_month": "By Month",
+    "overseas": "Overseas",
     "births": "Births"
   }
 }
