--- a/public/locales/ms-MY/dashboard-birthday-explorer.json
+++ b/public/locales/ms-MY/dashboard-birthday-explorer.json
@@ -14,26 +14,32 @@
     "validation_max": "Sila isikan tarikh sebelum 31 Dis 2017",
     "age": "Anda berumur {{ years }} tahun, {{ months }} bulan dan {{ days }} hari",
     "info1": "Pada hari lahir anda, sebanyak ",
-    "state_count": "{{ count, number }}",
+    "state_births": "{{ count, number }}",
     "info2": " bayi telah dilahirkan di ",
     "info2_overseas": " bayi telah dilahirkan di ",
-    "overseas": " luar negara",
+    "overseas": "luar negara",
     "info3": ", dan sebanyak ",
-    "nation_count": "{{ count, number }}",
-    "info4": " bayi yang dilahirkan seluruh negara",
+    "nation_births": "{{ count, number }}",
+    "info4": " bayi telah dilahirkan di seluruh negara",
     "info5": ", termasuk anda!",
     "info6": "Pada tahun {{ year }}, hari lahir anda merupakan hari lahir ",
-    "rank": "ke-{{ rank }}",
-    "popularity": " paling popular daripada {{ count }} hari. Hari yang paling popular ialah {{ year_popular }}, sebaliknya hari yang paling jarang ialah {{ year_rare }}.",
+    "rank_one": " paling popular",
+    "rank_other": "ke-{{ count }}",
+    "rank_least": " paling jarang",
+    "popularity_first": " daripada {{ count }} hari. Hari yang paling popular ialah ",
+    "popularity_most": " paling popular daripada {{ count }} hari. Hari yang paling popular ialah ",
+    "popularity_least": " daripada {{ count }} hari. Hari yang paling popular ialah ",
+    "year_popular": "{{ count }}hb {{ month }}",
+    "rare": ", sebaliknya hari yang paling jarang ialah ",
+    "year_rare": "{{ count }}hb {{ month }}.",
     "explore": "Cubalah gunakan carta di bawah untuk menerokai bagaimana populariti hari lahir telah berubah sejak tahun 1923."
   },
   "section_2": {
     "title": "{{ state }}: Jumlah bayi yang dilahirkan pada setiap tarikh, dari tahun {{ start_year }} ke {{ end_year }}",
     "same_year": "{{ state }}: Jumlah bayi yang dilahirkan pada setiap tarikh dalam tahun {{ year }}",
-    "description": "Nota: Tiada kelahiran pada 29hb Februari kerana tiada tahun lompat dari tahun {{ start_year }} ke {{ end_year }} ",
-    "desc_sameyear": "Nota: Tiada kelahiran pada 29hb Februari kerana tiada tahun lompat dalam tahun {{ year }}",
     "by_date": "Mengikut tarikh",
     "by_month": "Mengikut bulan",
+    "overseas": "Luar Negara",
     "births": "Kelahiran"
   }
 }
