fix: popular/rare repeat cases, mobile dropdown

--- a/public/locales/en-GB/dashboard-birthday-explorer.json
+++ b/public/locales/en-GB/dashboard-birthday-explorer.json
@@ -33,18 +33,20 @@
     "rank_few": "{{ count }}rd",
     "rank_other": "{{ count }}th",
     "rank_least": " most rare",
-    "popularity_first": " out of {{ count }} dates. The most popular was ",
-    "popularity_most": " most popular out of {{ count }} dates. The most popular was ",
-    "popularity_least": " out of {{ count }} dates. The most popular was ",
-    "year_popular_one": "{{ count }}st {{ month }}",
-    "year_popular_two": "{{ count }}nd {{ month }}",
-    "year_popular_few": "{{ count }}rd {{ month }}",
-    "year_popular_other": "{{ count }}th {{ month }}",
+    "popularity_most": " most popular out of {{ count }} dates",
+    "popularity_without": " out of {{ count }} dates",
+    "popular": ". The most popular was ",
+    "popular_while": ", while the most popular was ",
+    "most_popular_one": "{{ count }}st {{ month }}",
+    "most_popular_two": "{{ count }}nd {{ month }}",
+    "most_popular_few": "{{ count }}rd {{ month }}",
+    "most_popular_other": "{{ count }}th {{ month }}",
     "rare": ", while the most rare was ",
-    "year_rare_one": "{{ count }}st {{ month }}.",
-    "year_rare_two": "{{ count }}nd {{ month }}.",
-    "year_rare_few": "{{ count }}rd {{ month }}.",
-    "year_rare_other": "{{ count }}th {{ month }}.",
+    "rare_none": ".",
+    "most_rare_one": "{{ count }}st {{ month }}.",
+    "most_rare_two": "{{ count }}nd {{ month }}.",
+    "most_rare_few": "{{ count }}rd {{ month }}.",
+    "most_rare_other": "{{ count }}th {{ month }}.",
     "explore": "Use the time series chart below to explore how the popularity of birthdays has changed over the years."
   },
   "section_2": {
