--- a/public/locales/ms-MY/dashboard-birthday-explorer.json
+++ b/public/locales/ms-MY/dashboard-birthday-explorer.json
@@ -26,12 +26,14 @@
     "rank_one": " paling popular",
     "rank_other": "ke-{{ count }}",
     "rank_least": " paling jarang",
-    "popularity_first": " daripada {{ count }} hari. Hari yang paling popular ialah ",
-    "popularity_most": " paling popular daripada {{ count }} hari. Hari yang paling popular ialah ",
-    "popularity_least": " daripada {{ count }} hari. Hari yang paling popular ialah ",
-    "year_popular": "{{ count }}hb {{ month }}",
+    "popularity_most": " paling popular daripada {{ count }} hari",
+    "popularity_without": " daripada {{ count }} hari",
+    "popular": ". Hari yang paling popular ialah ",
+    "popular_while": ", sebaliknya hari yang paling popular ialah ",
+    "most_popular": "{{ count }}hb {{ month }}",
     "rare": ", sebaliknya hari yang paling jarang ialah ",
-    "year_rare": "{{ count }}hb {{ month }}.",
+    "rare_none": ".",
+    "most_rare": "{{ count }}hb {{ month }}.",
     "explore": "Cubalah gunakan carta di bawah untuk menerokai bagaimana populariti hari lahir telah berubah sejak tahun 1923."
   },
   "section_2": {
