fix: move state from chart subheading to title

--- a/public/locales/en-GB/dashboard-blood-donation.json
+++ b/public/locales/en-GB/dashboard-blood-donation.json
@@ -14,7 +14,7 @@
     "area_type4": "Type O",
     "combine_header": "What are the latest blood donation trends in {{ state }}?",
     "combine_description": "Blood compromises 3 main components - red blood cells, platelets, and plasma. Although plasma can be stored for up to 3 years, red blood cells can be only stored for up to 42 days, and platelets only for up to 5 days. Therefore, it is vital to maintain a high and stable level of blood donations; when blood donation activity is low or volatile, healthcare services that depend upon blood transfusions may be negatively affected.",
-    "combine_title": "Daily Donations",
+    "combine_title": "{{ state }}: Daily Donations",
     "combine_tooltip1": "7d avg",
     "combine_tooltip2": "Daily",
     "area1_title": "Donation by donation type",
@@ -38,7 +38,7 @@
     "blood_b_perc": "B",
     "blood_a_perc": "A",
     "blood_o_perc": "O",
-    "barmeter_header": "A breakdown of donations by key variables",
+    "barmeter_header": "{{ state }}: A breakdown of donations by key variables",
     "barmeter_description": "Data for {{state}}",
     "barmeter1_title": "Blood Group",
     "barmeter1_title_tooltip": "This data largely reflects the population prevalence of each blood type, rather than certain blood groups being more likely to donate.",
