--- a/public/locales/ms-MY/dashboard-blood-donation.json
+++ b/public/locales/ms-MY/dashboard-blood-donation.json
@@ -14,7 +14,7 @@
     "area_type4": "Jenis O",
     "combine_header": "Apakah tren pendermaan darah terkini di {{ state }}?",
     "combine_description": "Darah mengandungi 3 komponen utama - sel darah merah, platelet, dan plasma. Walaupun plasma boleh disimpan sehingga 3 tahun, sel darah merah hanya boleh disimpan sehingga 42 hari, dan platelet hanya selama 5 hari. Oleh itu, adalah penting untuk mengekalkan tahap pendermaan darah yang tinggi dan stabil; apabila kadar pendermaan menjadi rendah dan tidak stabil, perkhidmatan penjagaan kesihatan yang bergantung kepada transfusi darah mungkin terkesan dengan negatif.",
-    "combine_title": "Pendermaan Harian",
+    "combine_title": "{{ state }}: Pendermaan Harian",
     "combine_tooltip1": "Purata 7 hari",
     "combine_tooltip2": "Harian",
     "area1_title": "Pendermaan mengikut jenis derma",
@@ -38,7 +38,7 @@
     "blood_b_perc": "B",
     "blood_a_perc": "A",
     "blood_o_perc": "O",
-    "barmeter_header": "Pecahan pendermaan mengikut pembolehubah utama",
+    "barmeter_header": "{{ state }}: Pecahan pendermaan mengikut pembolehubah utama",
     "barmeter_description": "Data untuk Malaysia",
     "barmeter1_title": "Kumpulan Darah",
     "barmeter1_title_tooltip": "Data ini mencerminkan nisbah setiap kumpulan darah dalam populasi, dan bukannnya menunjukkan sesuatu kumpulan darah itu lebih kerap menderma.",
