feat: add ranking

--- a/public/locales/ms-MY/dashboard-peka-b40.json
+++ b/public/locales/ms-MY/dashboard-peka-b40.json
@@ -6,5 +6,6 @@
     "timeseries_title": "{{ state }}: Saringan Harian",
     "choro_header": "Bagaimanakan kadar saringan berbeza di seluruh negara?",
     "choro_description": "Data ini menunjukkan % daripada populasi yang layak untuk saringan kesihatan PeKa B40 yang telah disaring sekurang-kurangnya sekali.",
+    "choro_ranking": "Kedudukan",
     "screening": "Saringan"
 }
