--- a/public/locales/en-GB/dashboard-peka-b40.json
+++ b/public/locales/en-GB/dashboard-peka-b40.json
@@ -6,5 +6,6 @@
     "timeseries_title": "{{ state }}: Daily Screenings",
     "choro_header": "How do screening rates differ across the country?",
     "choro_description": "This data shows the % of the population eligible for PeKa B40 screening in each state which has been screened at least once.",
+    "choro_ranking": "Ranking",
     "screening": "Screenings"
 }
