--- a/public/locales/en-GB/common.json
+++ b/public/locales/en-GB/common.json
@@ -131,7 +131,8 @@
     "dark": "Dark",
     "brought_by": "Brought to you by",
     "visit_portal": "Visit our portal",
-    "click_to_explore": "Click to explore"
+    "click_to_explore": "Click to explore",
+    "ovs": "Malaysian-born Overseas"
   },
   "agency": {
     "bnm": "Bank Negara Malaysia",
