--- a/public/locales/ms-MY/common.json
+++ b/public/locales/ms-MY/common.json
@@ -123,7 +123,8 @@
     "dark": "Gelap",
     "brought_by": "Brought to you by",
     "visit_portal": "Visit our portal",
-    "click_to_explore": "Click to explore"
+    "click_to_explore": "Click to explore",
+    "ovs": "Lahir di Luar Negara"
   },
   "agency": {
     "bnm": "Bank Negara Malaysia",
