fix: birthday dashboard

--- a/public/locales/en-GB/dashboard-birthday-explorer.json
+++ b/public/locales/en-GB/dashboard-birthday-explorer.json
@@ -1,6 +1,6 @@
 {
   "header": "Birthday Explorer",
-  "description": "Mark Twain once wrote that <i>{{ quote }}</i>. This website can’t tell you the meaning of life; we’re just a data site, after all. But what we can do is give you a fun, data-driven way to contextualise your birthday. How many people share your birthday? Which months of the year are most popular for giving birth? Which dates were particularly special? Explore the data below and find out!",
+  "description": "Mark Twain once wrote that <i>{{ quote }}</i>. This website can't tell you the meaning of life; we're just a data site, after all. But what we can do is give you a fun, data-driven way to contextualise your birthday. How many people share your birthday? Which months of the year are most popular for giving birth? Which dates were particularly special? Explore the data below and find out!",
   "quote": "“The two most important days in your life are the day you are born and the day you find out why”",
   "search": "Search Birthday",
   "enter_birthday": "Enter your birthday",
@@ -9,39 +9,37 @@
   "start_search": "Start searching for your birthday.",
   "section_1": {
     "title": "How popular is your birthday?",
+    "description": "Our birthday explorer only contains data from 1923 to 2017 for now. We will update this information from time to time.",
     "validation_incomplete": "The date is incomplete. Please enter a valid date.",
     "validation_min": "Please enter a date later than 1st Jan 1923.",
     "validation_max": "Please enter a date earlier than 31st Dec 2017",
     "age": "You are {{ years }} years, {{ months }} months and {{ days }} days old",
-    "info1": "On your birthday, there was ",
-    "info1_other": "On your birthday, there were ",
-    "state_births": "{{ count, number }}",
+    "info1": "On this day, there is ",
+    "info1_other": "On this day, there are ",
+    "count": "{{ count }}",
     "info2": " baby born in ",
     "info2_other": " babies born in ",
     "info2_overseas": " Malaysian baby born ",
     "info2_overseas_other": " Malaysian babies born ",
     "overseas": "Overseas",
-    "info3": ", and ",
-    "nation_births": "{{ count, number }}",
-    "info4_one": " baby born nationwide",
-    "info4_other": " babies born nationwide",
-    "info5_one": ", which is you!",
-    "info5_other": ", including you!",
-    "info6": "In {{ year }}, your birthday was the ",
+    "info3_zero": ", and {{ count }} babies born nationwide.",
+    "info3_one": ", and {{ count }} baby born nationwide.",
+    "info3_other": ", and {{ count }} babies born nationwide.",
+    "info6": "In {{ year }}, this birthday is the ",
     "rank_one": " most popular",
     "rank_two": "{{ count }}nd",
     "rank_few": "{{ count }}rd",
     "rank_other": "{{ count }}th",
-    "rank_least": " most rare",
-    "popularity_most": " most popular out of {{ count }} dates",
-    "popularity_without": " out of {{ count }} dates",
-    "popular": ". The most popular was ",
-    "popular_while": ", while the most popular was ",
+    "rank_least": " least popular ",
+    "popularity_most": " most popular out of the {{ count }} dates available that year",
+    "popularity_without": " out of the {{ count }} dates available that year",
+    "popular": ". The most popular is ",
+    "popular_while": ", while the most popular is ",
     "most_popular_one": "{{ count }}st {{ month }}",
     "most_popular_two": "{{ count }}nd {{ month }}",
     "most_popular_few": "{{ count }}rd {{ month }}",
     "most_popular_other": "{{ count }}th {{ month }}",
-    "rare": ", while the most rare was ",
+    "rare": ", while the most rare is ",
     "rare_none": ".",
     "most_rare_one": "{{ count }}st {{ month }}.",
     "most_rare_two": "{{ count }}nd {{ month }}.",
