--- a/public/locales/ms-MY/dashboard-birthday-explorer.json
+++ b/public/locales/ms-MY/dashboard-birthday-explorer.json
@@ -1,37 +1,35 @@
 {
-  "header": "Explorer Hari Lahir",
-  "description": "Mark Twain pernah berkata bahawa <i>{{ quote }}</i>. Namun begitu, laman web ini tidak mampu memberikan makna kehidupan kepada anda, lagipun, kita cuma sebuah laman web data. Tetapi, apa yang kita boleh buat ialah memberi konteks kepada hari lahir anda yang berasaskan data. Berapakah orang yang mempunyai hari lahir yang sama dengan anda? Bulan apakah yang paling popular untuk beranak? Hari apakah yang paling istimewa sepanjang tahun? Cubalah terokai data tersebut di bawah!",
-  "quote": "“Dua hari yang paling penting dalam kehidupan kita ialah hari kita dilahirkan bersama dengan hari kita memahami makna kehidupan”",
-  "search": "Cari Hari Lahir",
-  "enter_birthday": "Pilih Hari Lahir anda",
+  "header": "Peneroka Hari Lahir",
+  "description": "Mark Twain pernah berkata bahawa <i>{{ quote }}</i>. Namun begitu, laman web ini tidak mampu memberikan makna kehidupan kepada anda, lagipun, kita cuma sebuah laman web data. Tetapi, apa yang kita boleh buat adalah memberi konteks kepada hari lahir anda yang berasaskan data. Berapakah orang yang mempunyai hari lahir yang sama dengan anda? Bulan apakah yang paling popular untuk beranak? Hari apakah yang paling istimewa sepanjang tahun? Cubalah terokai data tersebut di bawah!",
+  "quote": "“Dua hari yang paling penting dalam kehidupan kita adalah hari kita dilahirkan bersama dengan hari kita memahami makna kehidupan”",
+  "search": "Cari hari Lahir",
+  "enter_birthday": "Pilih hari lahir anda",
   "choose_state": "Pilih negeri (tidak wajib)",
   "disclaimer": "Laman web ini tidak menyimpan data anda.",
   "start_search": "Sila mulakan pencarian anda.",
   "section_1": {
-    "title": "Betapa popularnya hari lahir anda?",
+    "title": "Adakah hari lahir anda popular di Malaysia?",
+    "description": "Peneroka hari lahir ini hanya mempunyai data bermula dari 1923 sehingga 2017 buat masa ini. Kami akan mengemaskini data dari masa ke semasa.",
     "validation_incomplete": "Tarikh yand diisi tidak lengkap. Sila isikan tarikh yang lengkap.",
     "validation_min": "Sila isikan tarikh selepas 1 Jan 1923",
     "validation_max": "Sila isikan tarikh sebelum 31 Dis 2017",
-    "age": "Anda berumur {{ years }} tahun, {{ months }} bulan dan {{ days }} hari",
-    "info1": "Pada hari lahir anda, sebanyak ",
-    "state_births": "{{ count, number }}",
+    "age": "Anda kini berumur {{ years }} tahun, {{ months }} bulan dan {{ days }} hari",
+    "info1": "Pada hari ini, sebanyak ",
+    "count": "{{ count }}",
     "info2": " bayi telah dilahirkan di ",
     "info2_overseas": " bayi telah dilahirkan di ",
     "overseas": "luar negara",
-    "info3": ", dan sebanyak ",
-    "nation_births": "{{ count, number }}",
-    "info4": " bayi telah dilahirkan di seluruh negara",
-    "info5": ", termasuk anda!",
-    "info6": "Pada tahun {{ year }}, hari lahir anda merupakan hari lahir ",
-    "rank_one": " paling popular",
+    "info3": ", dan sebanyak {{ count }} bayi telah dilahirkan di seluruh negara.",
+    "info6": "Hari lahir ini juga merupakan hari lahir yang ",
+    "rank_one": "paling popular",
     "rank_other": "ke-{{ count }}",
     "rank_least": " paling jarang",
-    "popularity_most": " paling popular daripada {{ count }} hari",
-    "popularity_without": " daripada {{ count }} hari",
-    "popular": ". Hari yang paling popular ialah ",
-    "popular_while": ", sebaliknya hari yang paling popular ialah ",
+    "popularity_most": " paling popular daripada {{ count }} hari pada tahun {{ year }}",
+    "popularity_without": " daripada {{ count }} hari pada tahun {{ year }}",
+    "popular": ". Hari yang paling popular adalah ",
+    "popular_while": ", manakala hari yang paling popular adalah ",
     "most_popular": "{{ count }}hb {{ month }}",
-    "rare": ", sebaliknya hari yang paling jarang ialah ",
+    "rare": ", manakala hari yang paling jarang adalah ",
     "rare_none": ".",
     "most_rare": "{{ count }}hb {{ month }}.",
     "explore": "Cubalah gunakan carta di bawah untuk menerokai bagaimana populariti hari lahir telah berubah sejak tahun 1923."
