--- a/public/locales/en-GB/dashboard-birthday-explorer.json
+++ b/public/locales/en-GB/dashboard-birthday-explorer.json
@@ -16,23 +16,23 @@
     "age": "You are {{ years }} years, {{ months }} months and {{ days }} days old",
     "info1": "On this day, there is ",
     "info1_other": "On this day, there are ",
-    "count": "{{ count }}",
+    "count": "{{ count, number }}",
     "info2": " baby born in ",
     "info2_other": " babies born in ",
     "info2_overseas": " Malaysian baby born ",
     "info2_overseas_other": " Malaysian babies born ",
     "overseas": "Overseas",
-    "info3_zero": ", and {{ count }} babies born nationwide.",
-    "info3_one": ", and {{ count }} baby born nationwide.",
-    "info3_other": ", and {{ count }} babies born nationwide.",
+    "and": ", and ",
+    "info3_one": " baby born nationwide.",
+    "info3_other": " babies born nationwide.",
     "info6": "In {{ year }}, this birthday is the ",
     "rank_one": " most popular",
     "rank_two": "{{ count }}nd",
     "rank_few": "{{ count }}rd",
     "rank_other": "{{ count }}th",
     "rank_least": " least popular ",
-    "popularity_most": " most popular out of the {{ count }} dates available that year",
-    "popularity_without": " out of the {{ count }} dates available that year",
+    "popularity_most": " most popular out of the {{ count }} dates available",
+    "popularity_without": " out of the {{ count }} dates available",
     "popular": ". The most popular is ",
     "popular_while": ", while the most popular is ",
     "most_popular_one": "{{ count }}st {{ month }}",
