--- a/public/locales/ms-MY/dashboard-birthday-explorer.json
+++ b/public/locales/ms-MY/dashboard-birthday-explorer.json
@@ -14,12 +14,13 @@
     "validation_min": "Sila isikan tarikh selepas 1 Jan 1923",
     "validation_max": "Sila isikan tarikh sebelum 31 Dis 2017",
     "age": "Anda kini berumur {{ years }} tahun, {{ months }} bulan dan {{ days }} hari",
-    "info1": "Pada hari ini, sebanyak ",
-    "count": "{{ count }}",
+    "info1": "Pada tarikh ini, sebanyak ",
+    "count": "{{ count, number }}",
     "info2": " bayi telah dilahirkan di ",
     "info2_overseas": " bayi telah dilahirkan di ",
     "overseas": "luar negara",
-    "info3": ", dan sebanyak {{ count }} bayi telah dilahirkan di seluruh negara.",
+    "and": ", dan sebanyak ",
+    "info3": " bayi telah dilahirkan di seluruh negara.",
     "info6": "Hari lahir ini juga merupakan hari lahir yang ",
     "rank_one": "paling popular",
     "rank_other": "ke-{{ count }}",
