--- a/public/locales/en-GB/dashboard-birthday-explorer.json
+++ b/public/locales/en-GB/dashboard-birthday-explorer.json
@@ -35,13 +35,13 @@
     "rank_none": "",
     "popularity": " most popular out of the {{ count }} possible dates",
     "popularity_without": " out of the {{ count }} possible dates",
-    "popular": ". The most popular is ",
-    "popular_while": ", while the most popular is ",
+    "popular": ". The most popular was ",
+    "popular_while": ", while the most popular was ",
     "most_popular_date_one": "{{ count }}st {{ month }}",
     "most_popular_date_two": "{{ count }}nd {{ month }}",
     "most_popular_date_few": "{{ count }}rd {{ month }}",
     "most_popular_date_other": "{{ count }}th {{ month }}",
-    "rare": ", while the most rare is ",
+    "rare": ", while the most rare was ",
     "rare_none": ".",
     "most_rare_date_one": "{{ count }}st {{ month }}.",
     "most_rare_date_two": "{{ count }}nd {{ month }}.",
