--- a/public/locales/ms-MY/dashboard-birthday-explorer.json
+++ b/public/locales/ms-MY/dashboard-birthday-explorer.json
@@ -22,8 +22,8 @@
     "and": ", dan sebanyak ",
     "info3": " bayi telah dilahirkan di seluruh negara.",
     "info4": "Hari lahir ini juga merupakan hari lahir yang ",
-    "rank_one": "",
-    "rank_other": "ke-{{ count }}",
+    "rank": "ke-{{ count }}",
+    "rank_none": "",
     "most_popular": " paling popular",
     "most_rare": " paling jarang",
     "popularity": " paling popular daripada {{ count }} hari pada tahun {{ year }}",
