fix: year singular/plural

--- a/public/locales/en-GB/dashboard-birthday-explorer.json
+++ b/public/locales/en-GB/dashboard-birthday-explorer.json
@@ -13,7 +13,12 @@
     "validation_incomplete": "The date is incomplete. Please enter a valid date.",
     "validation_min": "Please enter a date later than 1st Jan 1923.",
     "validation_max": "Please enter a date earlier than 31st Dec 2017",
-    "age": "You are {{ years }} years, {{ months }} months and {{ days }} days old",
+    "year": "You are {{ count }} year, ",
+    "year_other": "You are {{ count }} years, ",
+    "month": "{{ count }} month and ",
+    "month_other": "{{ count }} months and ",
+    "day": "{{ count }} day old",
+    "day_other": "{{ count }} days old",
     "info1": "On this day, there was ",
     "info1_other": "On this day, there were ",
     "count": "{{ count, number }}",
