--- a/public/locales/ms-MY/dashboard-birthday-explorer.json
+++ b/public/locales/ms-MY/dashboard-birthday-explorer.json
@@ -13,7 +13,9 @@
     "validation_incomplete": "Tarikh yand diisi tidak lengkap. Sila isikan tarikh yang lengkap.",
     "validation_min": "Sila isikan tarikh selepas 1 Jan 1923",
     "validation_max": "Sila isikan tarikh sebelum 31 Dis 2017",
-    "age": "Anda kini berumur {{ years }} tahun, {{ months }} bulan dan {{ days }} hari",
+    "year": "Anda kini berumur {{ count }} tahun, ",
+    "month": "{{ count }} bulan dan ",
+    "day": "{{ count }} hari",
     "info1": "Pada tarikh ini, sebanyak ",
     "count": "{{ count, number }}",
     "info2": " bayi telah dilahirkan di ",
