feat: initialise election explorer

--- a/public/locales/en-GB/dashboard-election-explorer.json
+++ b/public/locales/en-GB/dashboard-election-explorer.json
@@ -1,4 +1,9 @@
 {
     "header": "Election Explorer",
-    "description": ""
+    "description": "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip.",
+    "elections": "Elections",
+    "candidates": "Candidates",
+    "parties": "Political Parties",
+    "seats": "Seats",
+    "": ""
 }
