--- a/public/locales/ms-MY/dashboard-election-explorer.json
+++ b/public/locales/ms-MY/dashboard-election-explorer.json
@@ -1,4 +1,9 @@
 {
-    "header": "",
-    "description": ""
+    "header": "Peneroka Pilihan Raya",
+    "description": "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip.",
+    "elections": "Pilihan Raya",
+    "candidates": "Calon",
+    "parties": "Parti Politik",
+    "seats": "Kerusi",
+    "": ""
 }
