--- a/public/locales/en-GB/dashboard-car-popularity.json
+++ b/public/locales/en-GB/dashboard-car-popularity.json
@@ -10,7 +10,8 @@
     "option_colour": "Select car colour",
     "search_button": "Search for car",
     "search_prompt": "Start search for car brand to see your car popularity",
-    "timeseries_title": "{{car}}: Popularity over the Years",
+    "timeseries_car_description": "{{colour}} {{manufacturer}} {{car}}: ",
+    "timeseries_title": "Popularity over the Years",
     "timeseries_description": "Note: This data is based on the year the car was first registered with JPJ, not the year it was manufactured",
     "label": "Cars"
 }
