feat: display top 3 ranking in section 2

--- a/public/locales/en-GB/dashboard-blood-donation.json
+++ b/public/locales/en-GB/dashboard-blood-donation.json
@@ -82,5 +82,6 @@
     "high": "High",
     "male": "Male",
     "female": "Female",
-    "overall": "Overall"
+    "overall": "Overall",
+    "choro_ranking": "Ranking"
 }
