--- a/public/locales/ms-MY/dashboard-blood-donation.json
+++ b/public/locales/ms-MY/dashboard-blood-donation.json
@@ -82,5 +82,6 @@
     "high": "Tinggi",
     "male": "Lelaki",
     "female": "Perempuan",
-    "overall": "Keseluruhan"
+    "overall": "Keseluruhan",
+    "choro_ranking": "Kedudukan"
 }
