--- a/public/locales/en-GB/dashboard-election-explorer.json
+++ b/public/locales/en-GB/dashboard-election-explorer.json
@@ -5,6 +5,8 @@
     "candidates": "Candidates",
     "parties": "Political Parties",
     "seats": "Seats",
+    "full_result": "Full result",
+    "popular_searches": "Popular searches today ",
     "election": {
         "section_1": "Explore any election from Merdeka to the present!",
         "parliament": "Parliament",
@@ -19,16 +21,32 @@
         "full_result": "{{ election }}: Full result for ",
         "search_area": "Search for your area",
         "section_3": "Election analysis",
-        "voter_turnout": "Voter Turnout"
+        "voter_turnout": "Voter Turnout",
+        "majority_%": "Majority (%)", 
+        "rejected_votes": "Rejected votes", 
+        "%_PH": "% PH", 
+        "num_voters": "Number of voters"
     },
     "candidate": {
-        "header": "Explore the electoral history of anyone who’s ever competed in an election"
+        "header": "Explore the electoral history of anyone who’s ever competed in an election",
+        "search_candidate": "Search for candidate's name",
+        "never_compete_state": "{{ name }} has never competed in State elections",
+        "never_compete_parliament": "{{ name }} has never competed in Parliament elections",
+        "won": "Won",
+        "lost": "Lost"
     },
     "party": {
-        "header": "Explore any party’s entire electoral history"
+        "header": "Explore any party’s entire electoral history",
+        "search_party": "Search for political party name",
+        "formed_gov": "Formed the Government",
+        "formed_opp": "Formed the Opposition"
     },
     "seat": {
-        "header": "Explore the entire electoral history for your area"
+        "header": "Explore the entire electoral history for your area",
+        "search_seat": "Search for a seat (eg. P.051 Bayan Baru)",
+        "uncontested": "Uncontested",
+        "close": "Close contest",
+        "comfortable": "Comfortable win"
     },
     "": ""
 }
