--- a/public/locales/ms-MY/common.json
+++ b/public/locales/ms-MY/common.json
@@ -52,8 +52,6 @@
     "minimum": "Minima",
     "won": "Menang",
     "lost": "Kalah",
-    "form_gov": "Menjadi Kerajaan",
-    "form_opp": "Menjadi Pembangkang",
     "indicator": "Penunjuk",
     "charts": {
       "heatmap": "Peta",
@@ -67,7 +65,8 @@
     "state_first": "Pilih negeri terlebih dahulu",
     "district": "Pilih daerah",
     "facility": "Pilih fasiliti",
-    "facility_type": "Pilih jenis fasiliti"
+    "facility_type": "Pilih jenis fasiliti",
+    "no_results": "Tiada hasil carian"
   },
   "nav": {
     "home": "Utama",
