fix: w-2/3 dc index page

--- a/public/locales/en-GB/common.json
+++ b/public/locales/en-GB/common.json
@@ -345,7 +345,7 @@
     "begin": "Begin",
     "end": "End",
     "source": "Data Source",
-    "source_placeholder": "Select ministry or agency",
+    "source_placeholder": "Select agency",
     "search_placeholder": "Search for dataset",
     "image": {
       "title": "Image (PNG)",
